syntax = "proto3";

package filesync;

option go_package = "github.com/underthetreee/fsync/pkg/proto";

import "google/protobuf/timestamp.proto";

service FileSyncService {
    rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
    rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message File {
    string filename = 1;
    bytes content = 2;
}

message UploadFileRequest {
    File file = 1;
}

message UploadFileResponse {}

message DownloadFileRequest {
    string filename = 1;
}

message DownloadFileResponse {
    File file = 1;
}

message DeleteFileRequest {
    string filename = 1;
}

message DeleteFileResponse {}

message FileEvent {
    enum EventType {
        UNKNOWN = 0;
        UPLOAD = 1;
        DOWNLOAD = 2;
        DELETE = 3;
    }
    string filename = 1;
    EventType type = 2;
    
    google.protobuf.Timestamp timestamp = 3; 
}